# deploy-AIChatbot-V

./: All FAQs.xlsx  create_index.py  intent_router.py  intent_router_old.py  main.py  memory_manager.py  prompt_manager.py  pyproject.toml  rag_engine.py  render.yaml  requirements.txt  requirements_old.txt  scheduler.db  scheduler_portable.py  scheduler_win.py  test_session.py  vector_store.py
documents/: AI_Chatbot_FAQs - Copy.docx  AI_Chatbot_FAQs.docx  FAQs_for_AI_Chatbot_1.docx  FAQs_from_Marketing.xlsx  Softdel-service_FAQ.docx  Softdel_Chatbot_FAQs.csv  urls.txt  www.edificedx.ai_edificeedge_.txt  www.edificedx.ai_edificeplus_.txt  www.softdel.com_about-softdel_.txt  www.softdel.com_bacnet-device-simulator_.txt  www.softdel.com_bacnet-services_.txt  www.softdel.com_bacnet-stack_.txt  www.softdel.com_cloud-services_.txt  www.softdel.com_custom-application-development_.txt  www.softdel.com_data-and-ai_.txt  www.softdel.com_digital-building-solutions_.txt  www.softdel.com_digital-factory-solutions_.txt  www.softdel.com_dmx-512-stack_.txt  www.softdel.com_embedded-engineering-solutions_.txt  www.softdel.com_functional-safety-and-compliance_.txt  www.softdel.com_gcc-as-a-service_.txt  www.softdel.com_hart-protocol-stack_.txt  www.softdel.com_industry4-0_.txt  www.softdel.com_iot-labs_.txt  www.softdel.com_iot-services-solutions-provider_.txt  www.softdel.com_managed-services_.txt  www.softdel.com_mobile-application-development_.txt  www.softdel.com_modbus-stack_.txt  www.softdel.com_platform-engineering_.txt  www.softdel.com_smart-energy_.txt  www.softdel.com_ui-ux_.txt  (+1 more)
(+12 files in other folders)
