[project]
name = "chatbotui1"
version = "0.1.0"
description = "OPTIONAL"
authors = [
    {name = "sudhir.gaikwad",email = "sudhir.gaikwad@softdel.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
